fixed menu on mobile, made image unselectable

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -13,6 +13,13 @@
   object-fit: contain;
 }
 
+img {
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    pointer-events: none;
+}
+
 @media screen and (min-width: 1024px) and (min-aspect-ratio: 4/3) {
   .carContainer {
     margin-top: -5vh;
